maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.error
Escaper:11: error: ';' expected but '{' found.
	while (estFaceMur()) {
                             ^Escaper:21: error: Unmatched closing brace '}' ignored here
}
^